--- a/src/styles/pages/_form-page.scss
+++ b/src/styles/pages/_form-page.scss
@@ -131,6 +131,7 @@
                 opacity: 0;
                 pointer-events: none;
                 transition: opacity 0.2s ease;
+                cursor: pointer;
             }
         }
 
