--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,6 +1,7 @@
 @import '../helpers/variables.scss';
 
 .button {
+    display: block;
     padding: 10px 15px;
     background: #000;
     color: #fff;
