--- a/src/styles/components/_post-card.scss
+++ b/src/styles/components/_post-card.scss
@@ -1,5 +1,5 @@
 .post_card {
-  width: 600px;
+  width: 100%;
   margin: 40px 0px;
   padding: 30px;
   border-radius: 30px;
@@ -157,6 +157,9 @@
         border-radius: 20px;
         cursor: pointer;
         background-color: $input-placeholder;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .actions {
@@ -199,7 +202,7 @@
 
   .states {
     display: flex;
-    gap: 20px;
+    gap: 40px;
     align-items: center;
     opacity: 0.4;
 
@@ -226,6 +229,14 @@
       overflow: hidden;
       border-radius: 15px;
       background: $input-placeholder;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        border: 2px solid red;
+        object-fit: cover;
+      }
     }
 
     .comment_box {
@@ -240,6 +251,11 @@
         transform: translateY(-50%);
         cursor: pointer; 
         fill: $input-placeholder;
+      }
+
+      input[type=text] {
+
+        padding-right: 40px ;
       }
 
       input[type="file"] {
