--- a/src/styles/helpers/_resets.scss
+++ b/src/styles/helpers/_resets.scss
@@ -29,16 +29,17 @@
     -moz-osx-font-smoothing: grayscale;
     background-color: $main-bg-color;
     overflow-x: hidden;
+    overflow-y: scroll;
 
     &::-webkit-scrollbar {
       width: 8px;
       height: 8px;
-      background: $light-bg;
+      background: $main-bg-color;
     }
     &::-webkit-scrollbar-track {
       width: 8px;
       height: 8px;
-      background: $light-bg; 
+      background: $main-bg-color;
     }
     &::-webkit-scrollbar-thumb {
       width: 8px;
