--- a/src/styles/pages/_new-feed-page.scss
+++ b/src/styles/pages/_new-feed-page.scss
@@ -1,7 +1,20 @@
 @import '../helpers/variables';
 
 main#new-feed-page {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    display:grid;
+    grid-template-columns: 1fr 750px 1fr;
+    gap: 30px;
+
+    #left-panel {
+        padding: 0px 20px;
+    }
+    
+    #posts-feed {
+        width: 100%;
+        margin: auto;
+    }
+    
+    #right-panel {
+        padding: 0px 20px;
+    }
 }
