--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @import './components/mini-profile-card';
 @import './components/post-placeholder';
 @import './components/profile-placeholder';
+@import './components/personal-settings';
 
 
 /* PAGES 
@@ -25,6 +26,7 @@
 @import './pages/home-page';
 @import './pages/form-page';
 @import './pages/profile';
+@import './pages/settings-page';
 
 
 /* Globals
