--- a/src/styles/components/_mini-profile-card.scss
+++ b/src/styles/components/_mini-profile-card.scss
@@ -9,7 +9,7 @@ main#mini-profile-card {
     .cover {
         background: $input-placeholder;
         position: relative;
-        max-height: 120px;
+        height: 120px;
         overflow: hidden;
 
         
